--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,29 @@ figcaption{
 }
 
 ul{
-    padding-left: 15px;
+    padding-left: 20px;
+}
+
+table{
+    border-spacing: 0;
+}
+
+thead{
+    background-color: #4194ec;
+    color: white;
+    text-align: left;
+}
+
+.short{
+    width: 300px;
 }
 
 .hightlight{
     background-color: yellow;
+}
+
+.bg_lb{
+    background-color: lightblue;
 }
 
 .page-title{
