--- a/css/bonus.css
+++ b/css/bonus.css
@@ -2,12 +2,52 @@
     margin:0;
 }
 
-section{
+/* Header's Proprieties */
+
+.page-title{
     width: 60%;
     margin: auto;
     margin-top: 20px;
 }
 
+.text-lightblue{
+    color: rgb(61, 184, 225);
+}
+
+.title-description{
+    color: gray;
+}
+
+#data{
+    font-size: small;
+}
+
+#banner {
+    width: 100%;
+    height: 100px;
+    background-color: #4194ec;
+    background-image: url("../img/pattern.png");
+    background-size: 400px;
+}
+
+#booleaner-logo {
+    height: 60px;
+    width: 100%;
+    background-image: url("../img/logo.svg");
+    background-size: 200px;
+    background-repeat: no-repeat;
+    padding-top: 30px;
+    margin-left: 5px;
+    background-position: bottom left;
+}
+
+/* Main's Proprieties */
+
+section{
+    width: 60%;
+    margin: auto;
+    margin-top: 20px;
+}
 
 figcaption{
     font-size: small;
@@ -27,16 +67,6 @@ thead{
     text-align: left;
 }
 
-footer{
-    width: 60%;
-    margin:auto ;
-    margin-top: 30px;
-}
-
-footer>h4{
-    color: grey;
-}
-
 .short{
     width: 300px;
 }
@@ -49,18 +79,16 @@ footer>h4{
     background-color: lightblue;
 }
 
-.page-title{
+/* Footer's Proprieties */
+
+footer{
     width: 60%;
-    margin: auto;
-    margin-top: 20px;
+    margin:auto ;
+    margin-top: 30px;
 }
 
-.text-lightblue{
-    color: rgb(61, 184, 225);
-}
-
-.title-description{
-    color: gray;
+footer>h4{
+    color: grey;
 }
 
 .art_1{
@@ -88,27 +116,3 @@ footer>h4{
     padding-left: 10px;
     padding-top: 15px;
 }
-
-#data{
-    font-size: small;
-}
-
-#banner {
-    width: 100%;
-    height: 100px;
-    background-color: #4194ec;
-    background-image: url("../img/pattern.png");
-    background-size: 400px;
-}
-
-#booleaner-logo {
-    height: 60px;
-    width: 100%;
-    background-image: url("../img/logo.svg");
-    background-size: 200px;
-    background-repeat: no-repeat;
-    padding-top: 30px;
-    margin-left: 5px;
-    background-position: bottom left;
-}
-
